tests/typing/bad/poly_overload.catala_en

```catala
declaration min content anything of type t
  depends on x content anything of type t,
             y content anything of type t
  equals if x <= y then x else y

declaration foo content integer equals
  3 + impossible

```

```catala-test-cli
$ catala typecheck
┌─[ERROR]─ 1/2 ─
│
│  In this application of operator <=, the type of an operand is unknown
│
├─➤ tests/typing/bad/poly_overload.catala_en:6.13-6.19:
│   │
│ 6 │   equals if x <= y then x else y
│   │             ‾‾‾‾‾‾
│
│ Undetermined type <any type> coming from expression:
├─➤ tests/typing/bad/poly_overload.catala_en:3.13-3.16:
│   │
│ 3 │ declaration min content anything of type t
│   │             ‾‾‾
└─
┌─[ERROR]─ 2/2 ─
│
│  In this application of operator +, the type of an operand is unknown
│
├─➤ tests/typing/bad/poly_overload.catala_en:9.3-9.17:
│   │
│ 9 │   3 + impossible
│   │   ‾‾‾‾‾‾‾‾‾‾‾‾‾‾
│
│ Undetermined type <any type> coming from expression:
├─➤ tests/typing/bad/poly_overload.catala_en:9.5-9.6:
│   │
│ 9 │   3 + impossible
│   │     ‾
└─
#return code 123#
```
